# exp-checkGED

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
data/: dbpedia-3p.gfd  dbpedia-4p.gfd  dbpedia-4p.gfd.vali  dbpedia-5p.gfd  dbpedia.e  dbpedia.gfd  dbpedia.v  dbpedia_label39.e  dbpedia_label39.v  g.gfd  g.gfd.vali  g.v  test.ged
data/test/: g.e  g.gfd.remap  g.gfd.remap.map  g.gfd.remap.vali  g.remap.v
include/: checkGED.h  util.h
include/struct/: ged.h  graph.h  node.h  vertex.h
script/: CMakeCache.txt  GFD2GED.py  Makefile  batch_remap.sh  batch_run.sh  batch_select.sh  cmake_install.cmake  delivery.cpp  exp-checkGED  reduceGFD.py  remap.sh  run.sh  run_use_boost_vf2.sh  select.sh  select_all.sh
src/: checkGED.cpp
